shadowl version 0.2